--- a/src/styles/pages/Presentation.scss
+++ b/src/styles/pages/Presentation.scss
@@ -1,11 +1,12 @@
 .Presentation {
   display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   flex-direction: column;
-  justify-content: space-evenly;
-  justify-items: stretch;
   text-align: center;
   align-items: center;
-  min-height: 90vh;
   .Presentation_title {
     color: rgb(3, 70, 164);
     font-size: 1.6rem;
@@ -25,5 +26,8 @@
     }
   }
   @media (min-width: 1280px) {
+    .Presentation_text {
+      font-size: 1.5rem;
+    }
   }
 }
