--- a/src/styles/pages/Address.scss
+++ b/src/styles/pages/Address.scss
@@ -1,9 +1,6 @@
 .Address {
   display: flex;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: auto;
   flex-direction: column;
   text-align: center;
   align-items: center;
